Minor fixes to the display of html fields in groups and fixes the double group wrapping issue

--- a/parts/css/piklist.css
+++ b/parts/css/piklist.css
@@ -94,6 +94,10 @@
     padding-top: 1%;
     margin-bottom: 1em;
   }
+  
+    .piklist-field-display.piklist-field-column {
+      margin-bottom: 0 !important;
+    }
 
   .piklist-label-container {
     width: 200px;
